--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,12 @@ services:
     ports:
       - 8080:8080
       - 50000:50000
-  registry:
+  gitlab:
+    image: gitlab/gitlab-ce:latest
+    ports:
+      - 5001:5001
+      - 81:81
+  docker-registry:
     image: "registry:latest"
     ports:
       - 5000:5000
