--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline{
     stages {
         stage("Checkout SCM"){
             steps{
-                git "https://github.com/Testareaa/storybook.git"
+                checkout scm
             }
         }
         stage("Build Image"){
