--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,16 +1,20 @@
-node{
-    def dockerImage
+pipeline{
+    environment{
+        dockerimagename = "localhost:5000/storybook-showcase"
+        dockerImage = ""
+    }
+    agent any
 
+    stages {
         stage("Checkout SCM"){
-            checkout scm
-        }
-        stage("Build Image"){
-            dockerImage = docker.build("localhost:5000/storybook-showcase")                    
-        }
-        stage("Pushing Image"){
-            docker.withRegistry("http://localhost:5000"){
-                dockerImage.push("${env.BUILD_NUMBER}")
-                dockerImage.push("latest")
+            steps{
+                git "https://github.com/Testareaa/storybook.git"
             }
         }
+        stage("Build Image"){
+            steps{
+                sh "docker build -t ${dockerimagename}"
+            }
+        }
+    }
 }
