--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,9 +7,7 @@ pipeline{
 
     stages {
         stage("Checkout SCM"){
-            steps{
-                git "https://github.com/Testareaa/storybook.git"
-            }
+            checkout scm
         }
         stage("Build Image"){
             steps{
