--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,9 @@ pipeline{
 
     stages {
         stage("Checkout SCM"){
-            checkout scm
+            steps{
+                checkout scm
+            }
         }
         stage("Build Image"){
             steps{
